Refactor .htaccess file for redirects, caching, compression, and error handling

--- a/Commands.html
+++ b/Commands.html
@@ -12,7 +12,7 @@
     <meta property="og:type" content="website">
     <meta name="description" content="Dashboard For The Discord Bot Jamify.">
     <meta property="og:image" content="https://wwwyourjamify.tech/assets/img/standard (1).gif">
-    <meta property="og:title" content="Jamify">
+    <meta property="og:title" content="Jamify Commands">
     <link rel="icon" type="image/gif" sizes="256x256" href="assets/img/standard%20(1).gif">
     <link rel="icon" type="image/gif" sizes="960x540" href="assets/img/standard%20(2).gif">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
