--- a/Terms-of-Use.html
+++ b/Terms-of-Use.html
@@ -31,7 +31,7 @@
         <div class="container"><a class="navbar-brand d-flex align-items-center" href="index.html"><span class="d-flex justify-content-center align-items-center bs-icon-sm bs-icon-rounded bs-icon-primary me-2 bs-icon" style="width:65px;height:65px;background:url('assets/img/standard%20(1).gif') center / contain repeat;"></span></a><button data-bs-toggle="collapse" data-bs-target="#navcol-5" class="navbar-toggler"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-5">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="#">Commands</a></li>
+                    <li class="nav-item"><a class="nav-link" href="Commands.html">Commands</a></li>
                     <li class="nav-item"><a class="nav-link" href="About-Us.html">About Us</a></li>
                     <li class="nav-item"></li>
                 </ul>
