--- a/404.html
+++ b/404.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>404 Not Found</title>
+    <link rel="manifest" href="manifest.json" crossorigin="use-credentials">
     <link rel="stylesheet" href="assets/css/styles.css">
+    <meta property="og:title" content="Oops!!">
+    <meta property="og:image" content="https://www.yourjamify.tech/assets/img/standard (1).gif">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
@@ -18,6 +21,19 @@
             background: linear-gradient(135deg, #4b4ef8, #9f42f5); /* Replace with your gradient */
             color: #343a40;
             text-align: center;
+            position: relative;
+            overflow: hidden;
+        }
+        .background-art {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%"><rect width="100%" height="100%" fill="none" stroke="white" stroke-width="2" /><circle cx="50%" cy="50%" r="40%" fill="none" stroke="white" stroke-width="2" /></svg>') no-repeat center center;
+            background-size: cover;
+            z-index: 0;
+            opacity: 0.2;
         }
         .container {
             max-width: 600px;
@@ -26,13 +42,15 @@
             box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
             border-radius: 10px;
             animation: fadeIn 1s ease-in-out;
+            position: relative;
+            z-index: 1;
         }
         .banner {
-            background-color: none;
+            background-color: transparent;
             color: #fff;
-            padding: 10px;
+            padding: 20px;
             margin-top: 20px;
-            margin-bottom: 20px;
+            margin-bottom: 15px;
         }
         h1 {
             font-size: 4em;
@@ -65,12 +83,13 @@
     </style>
 </head>
 <body>
+    <div class="background-art"></div>
     <div class="container">
         <h1>404</h1>
         <p>Sorry, the page you are looking for does not exist.</p>
         <a href="index.html"><i class="fas fa-home"></i> Go to Home</a>
         <div class="banner">
-            <img src="assets/img/Banner.gif" alt="Banner" style="border-radius: 0;">
+            <img src="assets/img/Banner.gif" alt="Banner Image" style="border-radius: 0;">
         </div>
     </div>
 </body>
