--- a/index.html
+++ b/index.html
@@ -160,8 +160,17 @@
         </div>
         <div class="alert alert-dismissible fade show text-center my-4" role="alert" style="border-radius: 10px; background: none; border: none; max-width: 90%; margin: 0 auto;">
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close" style="filter: invert(1); position: absolute; top: 10px; right: 10px;"></button>
-            <img src="assets/img/ad_1.gif" alt="Ad" style="max-width: 100%; height: auto; border-radius: 10px; margin-top: 10px;">
-            <p class="mt-2" style="color: #fff; font-size: 1.1rem;">These ads help us maintain Jamify. Thank you for your support!</p>
+            <div style="position: relative; display: inline-block;">
+                <a href="https://www.example.com" target="_blank">
+                    <img src="assets/img/ad_1.gif" alt="Ad" style="max-width: 100%; height: auto; border-radius: 10px; margin-top: 10px;">
+                    <span style="position: absolute; bottom: 0.5px; right: 0.5px; 
+                         background: linear-gradient(135deg, #4b4ef8, #9f42f5);
+                         padding: 2px 6px; border-radius: 5px 0 5px 0; font-size: 0.9rem; 
+                         font-weight: 500; z-index: 1;">
+                    Ad
+                    </span>
+                </a>
+            </div>
         </div>
         <footer class="text-center py-4">
             <div class="container">
