Refactor link in index.html to point to phoenixwings.xyz

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         <div class="alert alert-dismissible fade show text-center my-4" role="alert" style="border-radius: 10px; background: none; border: none; max-width: 90%; margin: 0 auto;">
             <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close" style="filter: invert(1); position: absolute; top: 10px; right: 10px;"></button>
             <div style="position: relative; display: inline-block;">
-                <a href="https://www.example.com" target="_blank">
+                <a href="https://www.phoenixwings.xyz/" target="_blank">
                     <img src="assets/img/ad_1.gif" alt="Ad" style="max-width: 100%; height: auto; border-radius: 10px; margin-top: 10px;">
                     <span style="position: absolute; bottom: 0.5px; right: 0.5px; 
                          background: linear-gradient(135deg, #4b4ef8, #9f42f5);
